fix: change scrollbar width for aesthetics

--- a/src/app.scss
+++ b/src/app.scss
@@ -35,8 +35,8 @@ p {
 
 /* Custom Scrollbar Styles */
 ::-webkit-scrollbar {
-    width: 10px;
-	height: 10px;
+    width: 0.5em;
+	height: 0.5em;
 }
 
 ::-webkit-scrollbar-track {
